# daykountdown

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  DayKountdown.kdev4  Messages.sh  README.md  daykountdown.kdev4  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  org.kde.daykountdown.desktop
.kdev4/: DayKountdown.kdev4  daykountdown.kdev4
po/ar/: daykountdown.po
po/ca/: daykountdown.po
po/ca@valencia/: daykountdown.po
po/cs/: daykountdown.po
po/de/: daykountdown.po
po/en_GB/: daykountdown.po
po/eo/: daykountdown.po
po/es/: daykountdown.po
po/eu/: daykountdown.po
po/fi/: daykountdown.po
po/fr/: daykountdown.po
po/ga/: daykountdown.po
po/gl/: daykountdown.po
po/he/: daykountdown.po
po/is/: daykountdown.po
po/it/: daykountdown.po
po/ja/: daykountdown.po
po/ka/: daykountdown.po
po/ko/: daykountdown.po
po/lt/: daykountdown.po
po/nl/: daykountdown.po
po/nn/: daykountdown.po
po/pa/: daykountdown.po
po/pl/: daykountdown.po
po/pt/: daykountdown.po
po/pt_BR/: daykountdown.po
po/ro/: daykountdown.po
po/sk/: daykountdown.po
po/sl/: daykountdown.po
po/sv/: daykountdown.po
po/tr/: daykountdown.po
po/ug/: daykountdown.po
po/uk/: daykountdown.po
po/zh_CN/: daykountdown.po
po/zh_TW/: daykountdown.po
src/: .main.cpp.kate-swp  CMakeLists.txt  aboutdatapasser.cpp  aboutdatapasser.h  backend.cpp  backend.h  daykountdownconfig.kcfg  daykountdownconfig.kcfgc  importexport.cpp  importexport.h  kountdownmodel.cpp  kountdownmodel.h  main.cpp  pimmodule.cpp  pimmodule.h  resources.qrc
src/.kdev4/: src.kdev4
src/contents/: kountdowns.json
src/contents/ui/: .main.qml.kate-swp  AddEditSheet.qml  DatePicker.qml  EventsCalendarPage.qml  KountdownCard.qml  KountdownsPage.qml  SettingsPage.qml  addEditSheet.qml  addPage.qml  kountdownCard.qml  main.qml
